--- a/styles/prosilver/theme/base.css
+++ b/styles/prosilver/theme/base.css
@@ -24,7 +24,7 @@ html {
 body {
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	color: #333333;
-	background-color: #ffffff;
+	background-color: #000000;
 }
 
 input,
